@@ -1,3 +1,4 @@
 EBUILD perl-Compress-Zlib-2.015.ebuild 572 RMD160 fedd0b2cca4978bdafc87d321d4e081d9bc17836 SHA1 8cd8014aad0472c2b838bcdae852fe7d840f0618 SHA256 71a7270e4d3f9c77ce91bcc4fe352932b4376681279c81715abb1013e5295016
-MISC ChangeLog 673 RMD160 c2293b7da1e9160ba5996ef8e267c45acb35dbc7 SHA1 558db09117a606a1e4be1d340ded827da38fd325 SHA256 9496f47080bc65908e93967c5b62a464b03afb376dd20aefd5d8723cdbbbcb63
+EBUILD perl-Compress-Zlib-2.019.ebuild 571 RMD160 8af7007ddd6d2b8da78b73e485d44b8920e3ec9c SHA1 4e522640b5b9a5bf401f8e808d9668bdfb3f1b9d SHA256 dd4d1b8418cb7c41da53552b9d9951db86af043898720376008b4c874f96beb7
+MISC ChangeLog 814 RMD160 453647643ed0b6017f09d360f9d4726d1624fd1f SHA1 c51f7f50ff41ef236d450941b876a20d2178ed28 SHA256 a90aed64f986b10968ececdd63c9b50f6afbb89701f85c70a04c81fe3ff9eaa4
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
