@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Compress-Zlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Zlib/ChangeLog,v 1.3 2009/03/13 22:25:00 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Compress-Zlib/ChangeLog,v 1.4 2009/05/04 14:43:32 tove Exp $
+
+*perl-Compress-Zlib-2.019 (04 May 2009)
+
+  04 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Compress-Zlib-2.019.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-Compress-Zlib-2.008.ebuild:
